--- a/index.html
+++ b/index.html
@@ -6,11 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>FashionDriven</title>
 </head>
 <body>
-    
-
+        <div class="header">
+            <div class="leftHeader">
+                <img src="./imagens/Logo.png" alt="Logo">
+            </div>
+            <div class="rightHeader">
+            </div>
+        </div>
+        <div class="content">
+            <div class="leftContent"></div>
+            <div class="rightContent">
+                <img src="./imagens/ilustração.png" alt="ilustração">
+            </div>
+        </div>
+        <div class="footer">
+            <h1>Últimos pedidos<h1>
+            <div class="filter">
+                <div class="allModels"><p class="filterText">Todos os modelos</p></div>
+                <div class="tshirt"><p class="filterText">T-shirt</p></div>
+                <div class="shirt"><p class="filterText">Camiseta</p></div>
+                <div class="long"><p class="filterText">Manga longa</p></div>
+            </div>
+            <div class="shirtArea">
+                <div class="shirts">
+                </div>
+                <div class="shirts">
+                </div>  
+                <div class="shirts">
+                </div> 
+                <div class="shirts">
+                </div>  
+                <div class="shirts">
+                </div> 
+                <div class="shirts">
+                </div>
+                <div class="shirts">
+                </div>
+                <div class="shirts">
+                </div>
+                <div class="shirts">
+                </div>
+                <div class="shirts">
+                </div>  
+            </div>
+        </div>
     <script src="index.js"></script>
 </body>
 </html>
