layout base adicionado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,84 @@
             </div>
         </div>
         <div class="content">
-            <div class="leftContent"></div>
+            <div class="leftContent">
+                <div class="shirts">
+                    <h2>Escolha o modelo</h2>
+                    <div class="containerShirt">
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/tshirt.png" alt="">
+                            </button>
+                            <p>T-shirt</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/Camiseta.png" alt="">
+                            </button>
+                            <p>Camiseta</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/Mangalonga.png" alt="">
+                            </button>
+                            <p>Manga longa</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="collar">
+                    <h2>Escolha a gola</h2>
+                    <div class="containerShirt">
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/GolaV.png" alt="">
+                            </button>
+                            <p>Gola V</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/GolaRedonda.png" alt="">
+                            </button>
+                            <p>Gola redonda</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/GolaPolo.png" alt="">
+                            </button>
+                            <p>Gola Polo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tissue">
+                    <h2>Escolha o tecido</h2>
+                    <div class="containerShirt">
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/Seda.png" alt="">
+                            </button>
+                            <p>Seda</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/Algodão.png" alt="">
+                            </button>
+                            <p>Algodão</p>
+                        </div>
+                        <div class="model">
+                            <button class="space">
+                                <img src="./imagens/Poliester.png" alt="">
+                            </button>
+                            <p>Poliéster</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="reference">    
+                    <h3>Imagem de referência</h3>
+                    <input type="text" name="imgReference" placeholder="Insira o link">
+                </div>
+                <div class="confirmBtn">
+                    <h4>Confirmar pedido</h4>
+                </div>
+            </div>
             <div class="rightContent">
                 <img src="./imagens/ilustração.png" alt="ilustração">
             </div>
@@ -34,25 +111,25 @@
                 <div class="long"><p class="filterText">Manga longa</p></div>
             </div>
             <div class="shirtArea">
-                <div class="shirts">
+                <div class="models">
                 </div>
-                <div class="shirts">
+                <div class="models">
                 </div>  
-                <div class="shirts">
+                <div class="models">
                 </div> 
-                <div class="shirts">
+                <div class="models">
                 </div>  
-                <div class="shirts">
+                <div class="models">
                 </div> 
-                <div class="shirts">
+                <div class="models">
                 </div>
-                <div class="shirts">
+                <div class="models">
                 </div>
-                <div class="shirts">
+                <div class="models">
                 </div>
-                <div class="shirts">
+                <div class="models">
                 </div>
-                <div class="shirts">
+                <div class="models">
                 </div>  
             </div>
         </div>
