Versão com filtro para Todos os Modelos adicionada

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                 <div class="long"><p class="filterText">Manga longa</p></div>
             </div>
             <div class="shirtArea">
-                <div class="models">
+                <img src="" alt="">
+                <!-- <div class="models">
                 </div>
                 <div class="models">
                 </div>  
@@ -121,18 +122,20 @@
                 </div>  
                 <div class="models">
                 </div> 
-                <div class="models">
+                <div>
+                <div  class="models">
+                </divclass="models">
                 </div>
                 <div class="models">
                 </div>
                 <div class="models">
                 </div>
                 <div class="models">
-                </div>
-                <div class="models">
-                </div>  
+                </div>   -->
             </div>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
     <script src="index.js"></script>
 </body>
 </html>
