Função de filtro adicionada

--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
         <div class="footer">
             <h1>Últimos pedidos<h1>
             <div class="filter">
-                <div class="allModels"><p class="filterText">Todos os modelos</p></div>
-                <div class="tshirt"><p class="filterText">T-shirt</p></div>
-                <div class="shirt"><p class="filterText">Camiseta</p></div>
-                <div class="long"><p class="filterText">Manga longa</p></div>
+                <button onclick="getPromise(this)" class="allModels filterSelected"><p class="filterText">Todos os modelos</p></button>
+                <button onclick="getPromise1(this)" class="tshirt"><p class="filterText">T-shirt</p></button>
+                <button onclick="getPromise2(this)" class="shirt"><p class="filterText">Camiseta</p></button>
+                <button onclick="getPromise3(this)" class="long"><p class="filterText">Manga longa</p></button>
             </div>
             <div class="shirtArea">
-                <img src="" alt="">
                 <!-- <div class="models">
                 </div>
                 <div class="models">
