Borda azul ao selecionar item adicionada

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
                     <h2>Escolha o modelo</h2>
                     <div class="containerShirt">
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/tshirt.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>T-shirt</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/Camiseta.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Camiseta</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/Mangalonga.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Manga longa</p>
                         </div>
                     </div>
@@ -48,21 +48,21 @@
                     <h2>Escolha a gola</h2>
                     <div class="containerShirt">
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/GolaV.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Gola V</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/GolaRedonda.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Gola redonda</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/GolaPolo.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Gola Polo</p>
                         </div>
                     </div>
@@ -71,21 +71,21 @@
                     <h2>Escolha o tecido</h2>
                     <div class="containerShirt">
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/Seda.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Seda</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/Algodão.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Algodão</p>
                         </div>
                         <div class="model">
-                            <button class="space">
+                            <button onclick="selectItem(this)" class="space">
                                 <img src="./imagens/Poliester.png" alt="">
-                            </button>
+                            </button onclick="selectItem(this)">
                             <p>Poliéster</p>
                         </div>
                     </div>
