--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                 </div>
                 <div class="reference">    
                     <h3>Imagem de referência</h3>
-                    <input type="text" name="imgReference" placeholder="Insira o link">
+                    <input type="text" class="linkImg" placeholder="Insira o link">
                 </div>
                 <button class="confirmBtn">
                     <h4>Confirmar pedido</h4>
                 </button>
-                <button class="confirmBtn1 hidden" onclick="confirmOrder('.model', '.collar', '.tissue')" >
+                <button class="confirmBtn1 hidden" >
                     <h4>Confirmar pedido</h4>
                 </button>
             </div>
